fixes nav alignment

--- a/source/stylesheets/partials/desktop/_footer.sass
+++ b/source/stylesheets/partials/desktop/_footer.sass
@@ -8,7 +8,7 @@
     width: 241.3px
 
 .nav-words
-  margin-top: -36px
+  margin-top: -40px
 
   li
     text-decoration: underline
